# app/Http/Controllers/API/UserAPIController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\API;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\User\CreateUserAPIRequest;
 use App\Http\Requests\User\FindUserAPIRequest;
+use App\Http\Requests\User\UpdatePasswordUserAPIRequest;
 use App\Http\Requests\User\UpdateUserAPIRequest;
 use App\Repositories\UserRepository;
 
@@ -99,7 +100,54 @@ class UserAPIController extends Controller
      * )
      */
     public function update(int $id, UpdateUserAPIRequest $request, UserRepository $userRepository) {
-        return $userRepository->update($id, $request->all());
+        $user = $userRepository->update($id, $request->all());
+        return $this->sendResponse($user, __('messages.retrivied'));
+    }
+
+    /**
+     * @return Response
+     *
+     * @OA\Put(
+     *      path="/api/users/{id}/password",
+     *      summary="Update User password",
+     *      tags={"User"},
+     *      description="Update User password",
+     *      security={{"bearer":{}}},
+     *      @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer",
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="body",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="object",
+     *              @OA\Property(
+     *                  property="password",
+     *                  type="string",
+     *                  example="123456"
+     *              ),
+     *              @OA\Property(
+     *                  property="password2",
+     *                  type="string",
+     *                  example="123456"
+     *              )
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *      )
+     * )
+     */
+    public function updatePassword(int $id, UpdatePasswordUserAPIRequest $request, UserRepository $userRepository) {
+        $user = $userRepository->updatePassword($id, $request->all());
+        return $this->sendResponse($user, __('messages.retrivied'));
     }
 
     /**
