# app/Http/Requests/User/UpdatePasswordUserAPIRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\User;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdatePasswordUserAPIRequest extends FormRequest
+{
+    use WriteRuleTrait;
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'id' => $this->getIdRules(),
+            'password' => ['required', 'string', 'min:6'],
+            'password2' => ['required', 'string', 'min:6', 'same:password'],
+        ];
+    }
+
+    protected function prepareForValidation()
+    {
+        $this->merge([
+            'id' => $this->route('id')
+        ]);
+    }
+}
